src/objects/RingLeadTrigger__Trigger_Activity__c.object
<CustomObject>
    <fields>
        <fullName>RingLeadTrigger__Company__c</fullName>
        <label>Company/Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Configuration_Id__c</fullName>
        <label>Configuration Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Configuration_Name__c</fullName>
        <label>Configuration Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Record_Id__c</fullName>
        <label>Record Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Salesforce_Object__c</fullName>
        <label>Salesforce Object</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Salesforce_Record__c</fullName>
        <label>Salesforce Record</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Triggered_Time__c</fullName>
        <label>Triggered Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Update_Count__c</fullName>
        <label>Update Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Update_Details__c</fullName>
        <label>Update Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Trigger Activity</label>
    <listViews>
        <fullName>RingLeadTrigger__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trigger Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trigger Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>